--- a/templates/chatbot.html
+++ b/templates/chatbot.html
@@ -1,66 +1,15 @@
-{% extends 'base.html' %} {% block styles %}
+{% extends 'base.html' %}
+<!--  -->
+{% block styles %}
 <style>
   body,
   html {
     height: 100%;
   }
-
-  .messages-box {
-    flex: 1;
-    overflow-y: auto;
-  }
-
-  .messages-list {
-    padding-left: 0;
-  }
-
-  .message {
-    margin-bottom: 15px;
-    list-style: none;
-  }
-
-  .message-text {
-    padding: 10px;
-    border-radius: 5px;
-  }
-
-  .sent {
-    background-color: #dcf8c6;
-    align-self: flex-end;
-  }
-
-  .received {
-    background-color: #f1f0f0;
-    align-self: flex-start;
-  }
-
-  .message-form {
-    display: flex;
-    position: fixed;
-    bottom: 0;
-    left: 0;
-    right: 0;
-    padding: 10px;
-    background-color: #f8f9fa;
-  }
-
-  .message-input {
-    flex: 1;
-    border-radius: 0;
-    border-right: none;
-  }
-
-  .btn-send {
-    border-radius: 0;
-  }
-
-  .chat-container {
-    height: 100%;
-    display: flex;
-    flex-direction: column;
-  }
 </style>
-{% endblock %} {% block content %}
+{% endblock %}
+<!--  -->
+{% block content %}
 <div class="chat-container">
   <div class="card flex-grow-1">
     <div class="card-header bg-primary text-white">Chat</div>
@@ -77,16 +26,17 @@
     {% endif %}
     <div class="card-body messages-box">
       <ul class="list-unstyled messages-list">
-        <!-- <li class="message received">
+        <li class="message received">
           <div class="message-text">
             <div class="message-sender">
               <b>AI Chatbot</b>
             </div>
             <div class="message-content">
-              Hi {{user.username}}, I am your AI Chatbot, you can ask me anything.
+              Hi {{user.username}}, I am your AI Chatbot, you can ask me
+              anything.
             </div>
           </div>
-        </li> -->
+        </li>
 
         {% for chat in chats %} {% if chat.user == request.user %}
 
