--- a/templates/login.html
+++ b/templates/login.html
@@ -1,5 +1,8 @@
-{% extends 'base.html' %} {% block title %}Login{% endblock %} {% block styles
-%}
+{% extends 'base.html' %}
+<!-- sp -->
+{% block title %}Login{% endblock %}
+<!-- sp -->
+{% block styles%}
 <style>
   body {
     background-color: #f0f0f0;
@@ -64,7 +67,9 @@
     border-radius: 4px;
   }
 </style>
-{% endblock %} {% block content %}
+{% endblock %}
+<!-- sp -->
+{% block content %}
 <div class="login-container">
   <div class="card">
     <div class="card-header">Login</div>
@@ -96,6 +101,9 @@
         </div>
         <button type="submit">Login</button>
       </form>
+      <p>
+        Don't have an account? <a href="{% url 'register' %}">Create Account</a>
+      </p>
     </div>
   </div>
 </div>
